# howler-agents

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  GEA_Architecture.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/howler/: evaluator.md  reproducer.md
.claude/skills/howler-agents/: SKILL.md
.claude/skills/howler-agents-wiggam/: SKILL.md
.claude/skills/howler-auto-evolve/: SKILL.md
.claude/skills/howler-init/: SKILL.md
.claude/skills/howler-memory/: SKILL.md
.claude/skills/howler-setup/: SKILL.md
.claude/skills/howler-status/: SKILL.md
.claude/skills/howler-sync/: SKILL.md
.github/workflows/: build.yml  ci.yml  docs.yml  publish-npm.yml  publish-pypi.yml
deploy/docker/: Dockerfile.ui  docker-compose.yml
deploy/k8s/base/: configmap.yaml  docs-deployment.yaml  hpa.yaml  keda-proxy-svc.yaml  keda-scaled-objects.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service-deployment.yaml  service.yaml  ui-deployment.yaml
deploy/k8s/ingress/: cluster-issuer.yaml  ingress.yaml  ip-ingress.yaml  kustomization.yaml
deploy/k8s/overlays/production/: kustomization.yaml
deploy/k8s/overlays/staging/: kustomization.yaml
deploy/k8s/postgres/: cluster.yaml  scheduled-backup.yaml
deploy/k8s/redis/: values.yaml
docs/: local-usage.md
examples/basic-python/: run_evolution.py
examples/basic-ts/: package.json
examples/basic-ts/src/: main.ts
examples/claude-code/: howler-evolver.md
examples/cursor/.cursor/: mcp.json
examples/local-dev/: docker-compose.yml  init-db.sh  setup.sh
examples/polyglot/: run_polyglot.py
examples/swe-bench/: run_swe_bench.py
migrations/: 001_initial.sql  002_add_lineage_views.sql  003_auth_and_tenancy.sql
proto/: buf.gen.yaml  buf.yaml
proto/howler_agents/v1/: events.proto  service.proto  types.proto
scripts/: doks-setup.sh  gen-proto.sh  migrate.sh  scale.sh
